fix(settings): Text color match theme + spacing issue

--- a/packages/react-digital-ui/components/Input/InputNav/InputNav.styles.css
+++ b/packages/react-digital-ui/components/Input/InputNav/InputNav.styles.css
@@ -1,8 +1,10 @@
 .DigitalUi-InputNav {
     text-wrap: nowrap;
     user-select: none;
+    color: var(--palette-text-light);
 
     & .DigitalUi-Button-selected {
         cursor: default;
     }
+
 }
