--- a/packages/react-digital-ui/components/Input/InputSelect/InputSelect.styles.css
+++ b/packages/react-digital-ui/components/Input/InputSelect/InputSelect.styles.css
@@ -6,5 +6,10 @@
         border: none;
         cursor: pointer;
         background: transparent;
+        color: var(--palette-text);
+    }
+
+    & option {
+        color: var(--palette-background);
     }
 }
