--- a/packages/react-digital/Application/App/settings/AppSettings.styles.css
+++ b/packages/react-digital/Application/App/settings/AppSettings.styles.css
@@ -11,7 +11,6 @@
     user-select: none;
     color: var(--palette-text-disabled);
     font-weight: var(--font-weight-bold);
-    margin-bottom: calc(var(--spacing-1) * 0.5);
 }
 
 .DigitalUi-AppSettings-Password-Tip {
